<resources>
    <string name="app_name">ReaderManager</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="connect_reader_menu_item_text">Connect Reader</string>
    <string name="change_reader_menu_item_text">Change Reader</string>
    <string name="disconnect_reader_menu_item_text">Disconnect Reader</string>

    <string name="scan_button_text">Scan</string>
    <string name="scan_start_button_text">Start</string>
    <string name="scan_stop_button_text">Stop</string>
    <string name="clear_button_text">Clear</string>
    <string name="power_level_label_text">dBm</string>
    <string name="uniques_only_title">Uniques</string>
    <string name="use_fast_id_title">Fast Id</string>
    <string name="tag_list_title">Transportadores</string>
    <string name="barcode_list_title">Lista de Barcodes Escaneados</string>

    <string name="reset_reader_menu_item_text">Reset Reader</string>
</resources>